--- a/src/info.plist
+++ b/src/info.plist
@@ -21,7 +21,7 @@
 		</array>
 	</dict>
 	<key>createdby</key>
-	<string>0x84</string>
+	<string>Mashuma</string>
 	<key>description</key>
 	<string>Control Shimo VPN Client</string>
 	<key>disabled</key>
